@@ -88,3 +88,5 @@ libraryDependencies ++= Seq(
       )
   }
 }
+
+javacOptions ++= Seq("--source", "20", "--target", "20", "--enable-preview")
